tests/paczka1/small_fuzzy/41058026.err
Error in line 4: kKk A459 22,1
Error in line 10: SjKQthJwl S426 11,5
Error in line 13: cO2g6k1cBN S10 29,8
